--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ repository = "https://github.com/zu1k/http-proxy-ipv6-pool"
 cidr = "0.2"
 getopts = "0.2"
 hyper = { version = "0.14", features = ["client", "server", "http1", "runtime"] }
-tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util"] }
+tokio = { version = "1", features = ["full"] }
 rand = "0.8"
 
 
