--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ getopts = "0.2"
 hyper = { version = "0.14", features = ["client", "server", "http1", "runtime"] }
 tokio = { version = "1", features = ["full"] }
 rand = "0.8"
+lazy_static = "1.4.0"
 
 
 
