--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ hyper = { version = "0.14", features = ["client", "server", "http1", "runtime"] 
 tokio = { version = "1", features = ["full"] }
 rand = "0.8"
 lazy_static = "1.4.0"
-
+tokio-socks = "0.5.2"
+socks = "0.3"
 
 
 
