--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,12 +7,10 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        target: [x86_64-unknown-linux-gnu, x86_64-pc-windows-gnu, x86_64-apple-darwin]
-
-    runs-on: ${{ matrix.os }}
+        target: [x86_64-unknown-linux-gnu, i686-unknown-linux-gnu]
 
     steps:
       - name: Checkout code
@@ -24,13 +22,6 @@ jobs:
           toolchain: stable
           target: ${{ matrix.target }}
           override: true
-
-      - name: Install MinGW (Windows only)
-        if: runner.os == 'Windows'
-        run: |
-          choco install mingw
-          set PATH=C:\tools\mingw64\bin;%PATH%
-          rustup target add x86_64-pc-windows-gnu
 
       - name: Build project
         run: cargo build --release --target ${{ matrix.target }}
