--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,11 +37,16 @@ jobs:
           echo "Listing files in target/${{ matrix.target }}/release:"
           ls -al target/${{ matrix.target }}/release/
 
+      - name: Create tar.gz package
+        run: |
+          mkdir -p artifacts/${{ matrix.target }}
+          tar -czvf artifacts/${{ matrix.target }}/http-proxy-ipv6-pool_${{ matrix.target }}.tar.gz -C target/${{ matrix.target }}/release http-proxy-ipv6-pool
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.target }}-release
-          path: target/${{ matrix.target }}/release/http-proxy-ipv6-pool
+          path: artifacts/${{ matrix.target }}/http-proxy-ipv6-pool_${{ matrix.target }}.tar.gz
 
   release:
     needs: build
@@ -62,16 +67,11 @@ jobs:
           name: i686-unknown-linux-gnu-release
           path: ./artifacts/i686
 
-      - name: Rename artifacts for release
-        run: |
-          mv artifacts/x86_64/http-proxy-ipv6-pool artifacts/x86_64/http-proxy-ipv6-pool_x86_64
-          mv artifacts/i686/http-proxy-ipv6-pool artifacts/i686/http-proxy-ipv6-pool_i686
-
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            artifacts/x86_64/http-proxy-ipv6-pool_x86_64
-            artifacts/i686/http-proxy-ipv6-pool_i686
+            artifacts/x86_64/http-proxy-ipv6-pool_x86_64-unknown-linux-gnu.tar.gz
+            artifacts/i686/http-proxy-ipv6-pool_i686-unknown-linux-gnu.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
