--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ lazy_static = "1.4.0"
 tokio-socks = "0.5.2"
 socks = "0.3"
 base64 = "0.22.1"
+moka = { version = "0.12.8", features = ["sync"] }
 
 
 
